--- a/index.html
+++ b/index.html
@@ -4,12 +4,44 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="src/style.css" />
     <title>What's Your Weather?</title>
   </head>
-  <h1>Final Project!</h1>
+
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <h1>Tolland, CT, USA</h1>
+      <ul>
+        <li>Friday 05:00</li>
+        <li>Clear</li>
+      </ul>
+      <div class="row">
+        <div class="col-6">🌞 75°F | °C</div>
+        <div class="col-6">
+          <ul>
+            <li>Precipitation: 0%</li>
+            <li>Humidity: 73%</li>
+            <li>Wind: 10 mph/km</li>
+            <li>Sunrise: 7:05 am</li>
+            <li>Sunset: 7:30 pm</li>
+          </ul>
+        </div>
+      </div>
+      <small
+        ><a
+          href="https://github.com/JessMarciniak/WeatherAppFinal.git"
+          target="_blank"
+          >Open-source code</a
+        >
+        by Jessica Marciniak</small
+      >
+    </div>
     <script src="src/app.js"></script>
   </body>
 </html>
