--- a/index.html
+++ b/index.html
@@ -16,31 +16,33 @@
 
   <body>
     <div class="container">
-      <h1>Tolland, CT, USA</h1>
-      <ul>
-        <li>Friday 05:00</li>
-        <li>Clear</li>
-      </ul>
-      <div class="row">
-        <div class="col-6">🌞 75°F | °C</div>
-        <div class="col-6">
-          <ul>
-            <li>Precipitation: 0%</li>
-            <li>Humidity: 73%</li>
-            <li>Wind: 10 mph/km</li>
-            <li>Sunrise: 7:05 am</li>
-            <li>Sunset: 7:30 pm</li>
-          </ul>
+      <div class="weather-app">
+        <h1>Tolland, CT, USA</h1>
+        <ul>
+          <li>Friday 05:00</li>
+          <li>Clear</li>
+        </ul>
+        <div class="row">
+          <div class="col-6">🌞 75°F | °C</div>
+          <div class="col-6">
+            <ul>
+              <li>Precipitation: 0%</li>
+              <li>Humidity: 73%</li>
+              <li>Wind: 10 mph/km</li>
+              <li>Sunrise: 7:05 am</li>
+              <li>Sunset: 7:30 pm</li>
+            </ul>
+          </div>
         </div>
-      </div>
-      <small
-        ><a
-          href="https://github.com/JessMarciniak/WeatherAppFinal.git"
-          target="_blank"
-          >Open-source code</a
+        <small
+          ><a
+            href="https://github.com/JessMarciniak/WeatherAppFinal.git"
+            target="_blank"
+            >Open-source code</a
+          >
+          by Jessica Marciniak</small
         >
-        by Jessica Marciniak</small
-      >
+      </div>
     </div>
     <script src="src/app.js"></script>
   </body>
