--- a/index.html
+++ b/index.html
@@ -10,28 +10,48 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <sript src="https://unpkg.com/axios/dist/axios.min.js"></script>"
     <link rel="stylesheet" href="src/style.css" />
     <title>What's Your Weather?</title>
   </head>
 
   <body>
     <div class="container">
-      <div class="weather-app">
-        <h1>Tolland, CT, USA</h1>
-        <ul>
-          <li>Friday 05:00</li>
-          <li>Clear</li>
-        </ul>
-        <div class="row">
-          <div class="col-6">🌞 75°F | °C</div>
-          <div class="col-6">
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <div class="overview">
+            <h1>Tolland, CT, USA</h1>
             <ul>
-              <li>Precipitation: 0%</li>
-              <li>Humidity: 73%</li>
-              <li>Wind: 10 mph/km</li>
-              <li>Sunrise: 7:05 am</li>
-              <li>Sunset: 7:30 pm</li>
+              <li>Friday 05:00</li>
+              <li>Clear</li>
             </ul>
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <div class="clearfix weather-temperature">
+                <img
+                  src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+                  alt="yellow sun"
+                  class="float-left"
+                />
+                <div class="float-left">
+                  <strong>12</strong
+                  ><small
+                    ><span class="units">°C | °<a href="">F</a></span></small
+                  >
+                </span>
+              </div>
+            </div>
+            <div class="col-6">
+              <ul>
+                <li>Precipitation: 0%</li>
+                <li>Humidity: 73%</li>
+                <li>Wind: 10 mph/km</li>
+                <li>Sunrise: 7:05 am</li>
+                <li>Sunset: 7:30 pm</li>
+              </ul>
+            </div>
+            <div class="row"></div>
           </div>
         </div>
         <small
