Move additional stats right

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <sript src="https://unpkg.com/axios/dist/axios.min.js"></script>"
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>What's Your Weather?</title>
   </head>
@@ -20,7 +20,7 @@
       <div class="weather-app-wrapper">
         <div class="weather-app">
           <div class="overview">
-            <h1>Tolland, CT, USA</h1>
+            <h1>New York, NY, USA</h1>
             <ul>
               <li>Friday 05:00</li>
               <li>Clear</li>
@@ -39,10 +39,12 @@
                   ><small
                     ><span class="units">°C | °<a href="">F</a></span></small
                   >
-                </span>
+                </div>
               </div>
             </div>
-            <div class="col-6">
+          </div>
+          <div class="col-6">
+            <div class="weather-data-current">
               <ul>
                 <li>Precipitation: 0%</li>
                 <li>Humidity: 73%</li>
@@ -51,7 +53,6 @@
                 <li>Sunset: 7:30 pm</li>
               </ul>
             </div>
-            <div class="row"></div>
           </div>
         </div>
         <small
