Repositioned additional data

--- a/index.html
+++ b/index.html
@@ -37,21 +37,24 @@
                 <div class="float-left">
                   <strong>12</strong
                   ><small
-                    ><span class="units">°C | °<a href="">F</a></span></small
+                    ><span class="units"
+                      >°<a href="">C</a> | °<a href="">F</a></span
+                    ></small
                   >
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col-6">
-            <div class="weather-data-current">
-              <ul>
-                <li>Precipitation: 0%</li>
-                <li>Humidity: 73%</li>
-                <li>Wind: 10 mph/km</li>
-                <li>Sunrise: 7:05 am</li>
-                <li>Sunset: 7:30 pm</li>
-              </ul>
+
+            <div class="col-6">
+              <div class="weather-data-current">
+                <ul>
+                  <li>Precipitation: 0%</li>
+                  <li>Humidity: 73%</li>
+                  <li>Wind: 10 mph/km</li>
+                  <li>Sunrise: 7:05 am</li>
+                  <li>Sunset: 7:30 pm</li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
