Swapped Sunrise/set for High/low temp

--- a/index.html
+++ b/index.html
@@ -48,11 +48,14 @@
             <div class="col-6">
               <div class="weather-data-current">
                 <ul>
-                  <li>Precipitation: 0%</li>
-                  <li>Humidity: 73%</li>
-                  <li>Wind: 10 mph/km</li>
-                  <li>Sunrise: 7:05 am</li>
-                  <li>Sunset: 7:30 pm</li>
+                  <li>Feels like: <span id="feelsLike"> 50</span>°</li>
+                  <li>Humidity: <span id="humidity">73</span>%</li>
+                  <li>
+                    Wind: <span id="windSpeed">10</span>
+                    <span id="windSpeedUnits">mph/km</span>
+                  </li>
+                  <li>High: <span id="highTemp">30</span>°</li>
+                  <li>Low: <span id="lowTemp">15</span>°</li>
                 </ul>
               </div>
             </div>
