--- a/index.html
+++ b/index.html
@@ -29,11 +29,7 @@
           <div class="row">
             <div class="col-6">
               <div class="clearfix weather-temperature">
-                <img
-                  src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
-                  alt="yellow sun"
-                  class="float-left"
-                />
+                <img src="" alt="" class="float-left" id="weatherIcon" />
                 <div class="float-left">
                   <strong id="temperature"></strong
                   ><small
