Temperature Unit conversion

--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
                   <strong id="temperature"></strong
                   ><small
                     ><span class="units"
-                      >°<a href="">C</a> | °<a href="">F</a></span
+                      >°<a href="#" id="celsiusLink">C</a> | °<a
+                        href="#"
+                        id="fahrenheitLink"
+                        >F</a
+                      ></span
                     ></small
                   >
                 </div>
@@ -70,8 +74,8 @@
                     Wind: <span id="windSpeed">10</span>
                     <span id="windSpeedUnits">km/h</span>
                   </li>
-                  <li>High: <span id="highTemp">30</span>°</li>
-                  <li>Low: <span id="lowTemp">15</span>°</li>
+                  <li>High Temperature: <span id="highTemp">30</span>°</li>
+                  <li>Low Temperature: <span id="lowTemp">15</span>°</li>
                 </ul>
               </div>
             </div>
