--- a/index.html
+++ b/index.html
@@ -79,22 +79,7 @@
                 </ul>
               </div>
             </div>
-            <div class="weather-forecast">
-              <div class="row">
-                <div class="col-2">
-                  <div class="weather-forecast-date">Thurs</div>
-                  <img
-                    src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-                    alt=""
-                    width="42"
-                  />
-                  <div class="weather-forecast-temperatures">
-                    <span class="weather-forecast-temperature-max">18°</span>
-                    <span class="weather-forecast-temperature-min"> 12°</span>
-                  </div>
-                </div>
-              </div>
-            </div>
+            <div class="weather-forecast" id="weatherForecast"></div>
           </div>
           <div>Last updated: <span id="lastUpdate">Today</span></div>
         </div>
