--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="weather-app-wrapper">
         <div class="weather-app">
           <span>
-            <button id="myLocation">
+            <button class="current-location-button" id="myLocation">
               <img src="images/location-icon.png" width="25" />
             </button>
           </span>
@@ -39,22 +39,27 @@
                 <input
                   type="submit"
                   value="search"
-                  class="btn btn-secondary w-100"
+                  class="btn btn-info w-100"
                 />
               </div>
             </div>
           </form>
           <div class="overview">
-            <h1 id="city"></h1>
+            <h1 id="city">How's the weather there?</h1>
             <ul>
-              <li id="currentDate">Friday</li>
-              <li id="description">Clear</li>
+              <li id="currentDate"></li>
+              <li id="description"></li>
             </ul>
           </div>
           <div class="row">
             <div class="col-6">
               <div class="clearfix weather-temperature">
-                <img src="" alt="" id="weatherIcon" class="float-left" />
+                <img
+                  src="images/globe-search-icon.png"
+                  alt=""
+                  id="weatherIcon"
+                  class="float-left"
+                />
                 <div class="float-left">
                   <strong id="temperature"></strong
                   ><small
